WS-2019.2.3 <Ryabov Maxim@DESKTOP-5MVA1M0 Update React.xml

--- a/templates/React.xml
+++ b/templates/React.xml
@@ -1,6 +1,7 @@
 <templateSet group="React">
   <template name="pta" value="PropTypes.array," description="Array prop type" toReformat="true" toShortenFQNames="true">
     <context>
+      <option name="JS_EXPRESSION" value="false" />
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
@@ -111,6 +112,7 @@
   </template>
   <template name="ptsh" value="PropTypes.shape({&#10; $END$&#10;})," description="An object taking on a particular shape" toReformat="true" toShortenFQNames="true">
     <context>
+      <option name="JS_EXPRESSION" value="false" />
       <option name="TS_EXPRESSION" value="true" />
     </context>
   </template>
